# cmake-template

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt
src/adder/: CMakeLists.txt  adder.cpp  adder.h
src/cmd/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp
